@@ -24,7 +24,7 @@
     </modules>
 
     <properties>
-        <oap.project.version>25.0.3</oap.project.version>
+        <oap.project.version>25.1.0</oap.project.version>
 
         <maven.compiler.release>25</maven.compiler.release>
         <encoding>UTF-8</encoding>
@@ -44,6 +44,8 @@
         <oap.deps.maven.compiler.version>3.14.0</oap.deps.maven.compiler.version>
         <oap.deps.maven.enforcer.version>3.6.1</oap.deps.maven.enforcer.version>
         <min.maven.version>3.6.3</min.maven.version>
+
+        <oap.deps.interp4j-processor.version>2.0.0_jre21</oap.deps.interp4j-processor.version>
     </properties>
 
     <distributionManagement>
@@ -82,7 +84,20 @@
                         <arg>--add-modules</arg>
                         <arg>java.xml,java.compiler</arg>
                         <arg>-proc:full</arg>
+                        <arg>-Xplugin:interp4j</arg>
+
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                     </compilerArgs>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>dev.khbd.interp4j</groupId>
+                            <artifactId>interp4j-processor</artifactId>
+                            <version>${oap.deps.interp4j-processor.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
             <plugin>
